--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "module",
    "devDependencies": {
-      "ts-node": "10.7.0",
       "@types/node": "^16.11.10",
+      "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.10",
-      "reflect-metadata": "^0.1.13",
-      "mysql": "^2.14.1",
+      "body-parser": "^1.19.1",
+      "env-cmd": "^10.1.0",
       "express": "^4.17.2",
-      "body-parser": "^1.19.1"
+      "mysql2": "^2.3.3",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.10"
    },
    "scripts": {
-      "start": "node --loader ts-node/esm src/index.ts",
+      "start": "env-cmd node --loader ts-node/esm src/index.ts",
       "typeorm": "typeorm-ts-node-esm"
    }
 }
